add update user for admin
